--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     </head>
 
-    <body>
+    <body style="background-image:url({{url_for('static', filename='ipl_bg.jpg')}})">
 
         <!-- Website Title -->
     	<div class="container">
@@ -161,10 +161,10 @@
         <!-- Footer -->
        <div class='footer'>
            <div class="contact">
-               <a target="_blank" href="#"><i class="fab fa-github fa-lg contact-icon"></i></a>
-               <a target="_blank" href="#"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
+               <a target="_blank" href="https://github.com/raaviranjan/IPL---First-Inning-Score-Predictor"><i class="fab fa-github fa-lg contact-icon"></i></a>
+               <a target="_blank" href="https://www.linkedin.com/in/ravi-ranjan-5b9aa0157/"><i class="fab fa-linkedin fa-lg contact-icon"></i></a>
            </div>
-           <!--<p class='footer-description'>Made with ❤️ by Anuj Vyas.</p>-->
+           
            <p class='footer-description'>Made by Ravi Ranjan.</p>
        </div>
 
